--- a/style.css
+++ b/style.css
@@ -48,7 +48,6 @@ body {
 .footer > p {
     margin: 8px;
     color: white;
-    font: 14px monospace;
     text-align: center;
 }
 @media only screen and (min-width: 600px) {
@@ -123,7 +122,7 @@ a.button:active {
 }
 #aboutus {
     margin: 8px;
-    color: #96c56f;
+    color: #6666FF;
     font: 16px "Courier New";
     text-align: center;
 }
